Fix alignment for dg-topbar

--- a/src/less/components/topbar.less
+++ b/src/less/components/topbar.less
@@ -152,6 +152,7 @@
             overflow-y: auto;
             z-index: @zindex-topbar-nav;
             padding: 3rem 2rem;
+            align-items: center;
             transform: translateX(-100%);
 
             > a {
